Thu Mar 17 20:26:03 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c: cache機能追加
	* conf.rb: 上記のためのプロパティ追加

Wed Mar 16 21:23:29 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy: confプロパティ追加にともない再生成
	* xmarshaled-queue.c, conf.rb: log mstore機能追加

Wed Mar 16 19:43:40 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy: confプロパティ追加にともない再生成
	* fairy.h, fairy.c: conf, logインターフェース追加
	* xmarshaled-queue.c: confインターフェースに対応
	* fairy.rb, controller.rb, master.rb, node.rb, processor.rb,
	  port.rb, port-xmarshaled-queue.rb(削除): fairy.soロードメカニズム変更

Wed Mar 16 11:07:12 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext/extconf.rb: fiaryライブラリ改名
	* fairy.c, fairy.h, simple-hash.c, string-buffer.c, xmarshaled-queue.c:
	  fairy.h, fairy.c 導入による変更.
	
	* fairy.rb, controller.rb, master.rb, node.rb, processor.rb,
	  hash-simple-hash.rb, : fairy.soロードメカニズム変更

Tue Mar 15 20:38:32 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* simple-hash.c xmarshaled-queue.c: 改名した

Tue Mar 15 20:33:57 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext以下を統合した

Tue Mar 15 14:27:05 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c: XMarshaledQueue#initializeにバグがあった,
	  XMarshaledQueue#inspect追加
	* conf.rb: XMARSHAL_QUEUE_USE_STRING_BUFFERプロパティ追加
	* port.rb: ログ追加

Sat Mar 12 22:17:46 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c: xthradモジュールのAPI変更に伴う修正

Fri Mar 11 00:03:02 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c, conf.rb, port-xmarshaled-queue.rb, port.rb:
	  xmarshaled-queue対応(完了)
	* p-basic-group-by.rb, p-filter.rb, p-single-exportable.rb,
	  p-wc.rb: new fiber-mon対応(完了)

Wed Mar  9 21:09:34 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c, port-xmarshaled-queue.rb: xmarshaled-queue対応
	* p-filter.rb, port.rb: fibermon対応
	* p-task.rb, processor.rb: デバッグコード挿入

Tue Mar  8 00:26:56 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
