@@ -1,3 +1,7 @@
+Thu Mar 17 23:43:30 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* xmarshaled-queue.c: rb_fairy_xmarshaled_queue_popにバグがあった.
+
 Thu Mar 17 20:26:03 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* xmarshaled_queue.c: cache機能追加
